--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,6 +45,7 @@ span {
 }
 
 .restaurant {
+  cursor: pointer;
   .restaurant-items {
     display: flex;
     position: absolute;
@@ -52,13 +53,17 @@ span {
     border: 1px solid black;
     background-color: #fff;
     border-radius: 0 20px 0 20px;
-    margin-top: 10px;
+    margin-top: 5px;
     div {
       display: none;
       padding-left: 5px;
       padding-right: 5px;
       li {
         padding: 5px;
+        cursor: pointer;
+        &:hover {
+          color: red;
+        }
       }
     }
   }
