menu bar implementation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <li class="restaurant">
       Restaurant <i class="fas fa-angle-down"></i>
       <ul class="restaurant-items">
-        <div class="">
+        <div>
           <li><i class="fas fa-biking"></i><span>Delivery</span></li>
           <li><i class="fas fa-hamburger"></i><span>Citizens</span></li>
           <li><i class="fas fa-cocktail"></i><span>Chinese</span></li>
@@ -23,9 +23,74 @@
         </div>
       </ul>
     </li>
-    <li>Craft Services <i class="fas fa-angle-down"></i></li>
-    <li>Around the Car <i class="fas fa-angle-down"></i></li>
-    <li>More <i class="fas fa-angle-down"></i></li>
+    <li class="craft-service">
+      Craft Services <i class="fas fa-angle-down"></i>
+      <ul class="craft-service-list">
+        <div>
+          <li>
+            <i class="fas fa-hammer"></i><span>Construction company</span>
+          </li>
+          <li><i class="fas fa-plug"></i><span>Electrician</span></li>
+          <li>
+            <i class="fas fa-hands-wash"></i><span>Cleaning company</span>
+          </li>
+          <li>
+            <i class="fas fa-fire-alt"></i
+            ><span>Heating & air conditioning</span>
+          </li>
+        </div>
+        <div>
+          <li><i class="fas fa-mountain"></i><span>Landscaping</span></li>
+          <li><i class="fas fa-user-lock"></i><span>Locksmiths</span></li>
+          <li>
+            <i class="fas fa-truck-moving"></i><span>Moving company</span>
+          </li>
+          <li><i class="fas fa-shower"></i><span>Installers</span></li>
+        </div>
+      </ul>
+    </li>
+    <li class="around-the-car">
+      Around the Car <i class="fas fa-angle-down"></i>
+      <ul class="around-the-car-list">
+        <div>
+          <li><i class="fas fa-wrench"></i><span>Auto repair shop</span></li>
+          <li><i class="fas fa-tools"></i><span>Car preparation</span></li>
+          <li>
+            <i class="fas fa-leaf"></i><span>Plant shop & body shop</span>
+          </li>
+          <li><i class="fas fa-car"></i><span>Car wash</span></li>
+        </div>
+        <div>
+          <li><i class="fas fa-key"></i><span>Car dealer</span></li>
+          <li><i class="fas fa-oil-can"></i><span>Oil change</span></li>
+          <li><i class="fas fa-parking"></i><span>Parking spaces</span></li>
+          <li>
+            <i class="fas fa-truck-monster"></i><span>Towing service</span>
+          </li>
+        </div>
+      </ul>
+    </li>
+    <li class="more">
+      More <i class="fas fa-angle-down"></i>
+      <ul class="more-list">
+        <div>
+          <li>
+            <i class="fas fa-pump-soap"></i><span>Chemical cleaning</span>
+          </li>
+          <li>
+            <i class="fas fa-mobile-alt"></i><span>Mobile phone repair</span>
+          </li>
+          <li><i class="fas fa-glass-cheers"></i><span>Bars</span></li>
+          <li><i class="fas fa-beer"></i><span>Nightlife</span></li>
+        </div>
+        <div>
+          <li><i class="fas fa-soap"></i><span>Hairdressers</span></li>
+          <li><i class="fas fa-dumbbell"></i><span>Gyms</span></li>
+          <li><i class="fas fa-hot-tub"></i><span>Massages</span></li>
+          <li><i class="fas fa-shopping-cart"></i><span>Shopping</span></li>
+        </div>
+      </ul>
+    </li>
   </ul>
 </div>
 
