--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,11 +26,11 @@ ul.items {
   bottom: 0px;
   margin: 10px 0 10px 0;
   padding-left: 0;
-  margin-left: 25.5%;
+  margin-left: 24%;
 
   li {
     text-decoration: none;
-    padding: 5px;
+    padding: 5px 10px 5px 10px;
   }
 }
 ul {
@@ -43,15 +43,12 @@ ul {
 span {
   margin-left: 10px;
 }
-
 .restaurant {
   cursor: pointer;
   .restaurant-items {
     display: flex;
     position: absolute;
-    left: 0;
-    border: 1px solid black;
-    background-color: #fff;
+    background-color: #ffdab9;
     border-radius: 0 20px 0 20px;
     margin-top: 5px;
     div {
@@ -71,6 +68,98 @@ span {
     .restaurant-items {
       div {
         display: block;
+      }
+    }
+  }
+}
+.craft-service {
+  cursor: pointer;
+  &:hover {
+    .craft-service-list {
+      div {
+        display: block;
+      }
+    }
+  }
+  .craft-service-list {
+    display: flex;
+    position: absolute;
+    background-color: #ffdab9;
+    border-radius: 0 20px 0 20px;
+    margin-top: 5px;
+    div {
+      display: none;
+      padding-left: 5px;
+      padding-right: 5px;
+      li {
+        padding: 5px;
+        cursor: pointer;
+        white-space: nowrap;
+        &:hover {
+          color: red;
+        }
+      }
+    }
+  }
+}
+.around-the-car {
+  cursor: pointer;
+  &:hover {
+    .around-the-car-list {
+      div {
+        display: block;
+      }
+    }
+  }
+  .around-the-car-list {
+    display: flex;
+    z-index: 3000;
+    position: absolute;
+    background-color: #ffdab9;
+    border-radius: 0 20px 0 20px;
+    margin-top: 5px;
+    div {
+      display: none;
+      padding-left: 5px;
+      padding-right: 5px;
+      li {
+        padding: 5px;
+        cursor: pointer;
+        white-space: nowrap;
+        &:hover {
+          color: red;
+        }
+      }
+    }
+  }
+}
+.more {
+  cursor: pointer;
+  &:hover {
+    .more-list {
+      div {
+        display: block;
+      }
+    }
+  }
+  .more-list {
+    display: flex;
+    z-index: 3000;
+    position: absolute;
+    background-color: #ffdab9;
+    border-radius: 0 20px 0 20px;
+    margin-top: 5px;
+    div {
+      display: none;
+      padding-left: 5px;
+      padding-right: 5px;
+      li {
+        padding: 5px;
+        cursor: pointer;
+        white-space: nowrap;
+        &:hover {
+          color: red;
+        }
       }
     }
   }
