--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,7 +26,7 @@ ul.items {
   bottom: 0px;
   margin: 10px 0 10px 0;
   padding-left: 0;
-  margin-left: 24%;
+  margin-left: 22.5%;
 
   li {
     text-decoration: none;
@@ -73,6 +73,7 @@ span {
   }
 }
 .craft-service {
+  z-index: 3000;
   cursor: pointer;
   &:hover {
     .craft-service-list {
@@ -104,6 +105,7 @@ span {
 }
 .around-the-car {
   cursor: pointer;
+  z-index: 3000;
   &:hover {
     .around-the-car-list {
       div {
