--- a/src/app/_components/header/header.component.html
+++ b/src/app/_components/header/header.component.html
@@ -2,7 +2,7 @@
   <img class="yelp-logo" src="assets/image/yelp-logo.jpg" alt="" />
 
   <div class="search-box">
-    <div class="">
+    <div>
       <input
         class=""
         type="text"
@@ -14,7 +14,7 @@
       />
     </div>
     |
-    <div class="">
+    <div>
       <input
         class=""
         type="text"
